--- a/www/css/main.css
+++ b/www/css/main.css
@@ -45,3 +45,11 @@ body {
     font-size: 16px;
     cursor: pointer;
 }
+
+.jstree-container-ul>li>a>i.jstree-checkbox,.jstree-container-ul>li>ul>li>a>i.jstree-checkbox,
+.jstree-container-ul>li>ul>li>ul>li>a>i.jstree-checkbox,
+.jstree-container-ul>li>ul>li>ul>li>ul>li>a>i.jstree-checkbox,
+.jstree-container-ul>li>ul>li>ul>li>ul>li>ul>li>a>i.jstree-checkbox
+{
+    display:none
+}
